Fix y overflow for pre tags

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -275,6 +275,7 @@ pre {
   border-radius: 3px;
   color: #839496;
   margin: 1em 2%;
+  overflow-y: auto;
   padding: 15px;
 }
 
